<resources>
    <string name="app_name">task1</string>
    <string name="bull_s_rent">BULL\'S RENT</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nation_wide_car_rental_app">Nation wide car rental app</string>
    <string name="hello_there_welcome_back">HELLO THERE, WELCOME BACK</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="welcome">WELCOME,</string>
    <string name="already_have_an_account_login">ALREADY HAVE AN ACCOUNT? LOGIN</string>
</resources>