<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".loginScreen">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="160dp"
            android:id="@+id/ivicon"
            android:src="@drawable/icon" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:text="@string/hello_there_welcome_back"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/sign_in_to_continue" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:layout_marginTop="20sp"
            android:hint="@string/username" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:id="@+id/tvFORGOTPASSWORD"
            android:layout_marginRight="10sp"
            android:text="@string/forgot_password"
            android:textStyle="bold" />

        <Button
            android:layout_width="370sp"
            android:layout_height="wrap_content"

            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:id="@+id/btGO"
            android:text="@string/go" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:id="@+id/tvNEWSIGNUP"
            android:text="@string/new_user_sign_up"
            android:textStyle="bold" />


    </LinearLayout>
</ScrollView>